# MLang

./: .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  insns.txt
cmake/: FindRE2C.cmake
ex/: andfold.mlang  arith.mlang  bug1.mlang  calculator.mlang  complex.mlang  conditional.mlang  doctest.mlang  globvar.mlang  interactive_stack.mlang  looptest.mlang  math.mlang  simple.mlang  stack.mlang  stacktest.mlang  stdlib.mlang  strlib.mlang
ex/calc/: main.mlang  token.mlang
ex/cs146/: c10.mlang
src/: args.cpp  args.h  ast_optimize.cpp  ast_optimize.h  codegen.h  codegen_64.cpp  codegen_cgotos.cpp  codegen_x86.cpp  compiler.cpp  compiler.h  execorder.h  expr_utils.h  flow.cpp  flow.h  main.cpp  parser.y  preprocess.cpp  preprocess.h  stringify.h  tac.h  tac_optimize.cpp  tac_optimize.h  transform_iterator.h
tool/: tac_to_dot.py
